# fastlckin

./: .gitignore  CMakeLists.txt  README.md  test.sh  update_submodule.sh
.github/workflows/: build.yml
handoff/: performance_analysis.md
src/: algorithm.cpp  algorithm.h  frequency.cpp  frequency.h  frequency_from_gl.cpp  frequency_from_gl.h  frequency_from_likelihoods.cpp  frequency_from_likelihoods.h  genotype_likelihood.cpp  genotype_likelihood.h  ibd_model.cpp  ibd_model.h  kinship_estimator.cpp  kinship_estimator.h  ld_prune.cpp  ld_prune.h  main.cpp  optimizer.cpp  optimizer.h  relationship_likelihood.cpp  relationship_likelihood.h  version.h.in
src/io/: hts_utils.h  vcf.cpp  vcf.h  vcf_header.cpp  vcf_header.h  vcf_record.cpp  vcf_record.h
tests/: CMakeLists.txt  evaluate.py  generate_known_relationships.cpp  generate_test_data.cpp  plink_to_vcf_pl.py  run_eval.sh  test_algorithm.cpp  test_classification_config.cpp  test_frequency.cpp  test_frequency_from_gl.cpp  test_frequency_from_likelihoods.cpp  test_frequency_leave_one_out.cpp  test_fst_vector.cpp  test_genotype_likelihood.cpp  test_harness.h  test_ibd_model.cpp  test_input_modes.cpp  test_king_screening.cpp  test_ld_prune.cpp  test_ld_prune_gl.cpp  test_ld_prune_global.cpp  test_ld_prune_likelihoods.cpp  test_optimizer.cpp  test_pairs_filter.cpp  test_relationship_likelihood.cpp  test_se_ci.cpp  test_standard_errors.cpp  test_v030_correctness.cpp  test_v030_kinship_accuracy.cpp  test_v040_integration.cpp  validate_ground_truth.py
